  * Allow admin to create tinc-up.local and tinc-down.local
  * Allow admin to create subnet-up.local and subnet-down.local
  * Fix test for httplib
  * Instantly abort on parse errors
  * crypto.c: Unlink tempfiles, do not let them lie around.
  * Standards-Version: 3.9.1
  * Renamed config option "-a" to "-o" for 'oneshot mode' - describes
    better what it is really doing.

 -- Sven-Haegar Koch <haegar@sdinet.de>  Wed, 13 Oct 2010 22:16:17 +0200

chaosvpn (2.0-0) unstable; urgency=low

  * Finally released chaosvpn 2.0
  * Only create meta connections to a selected subset of nodes ("primary")
    when using tinc newer than 1.0.12, less load and tcp connections
    on end nodes.
    This breaks communication with nodes using tinc 1.0.12 and older,
    use config option $connect_only_to_primary_nodes=0 for old method
    of connecting to all non-hidden nodes.
  * New experimental config option $use_dynamic_routes
  * Optional configfile settings to specify VPN network interface name
    and path to tuntap device.
  * Include support to use tinc 1.1-git
  * Some basic compile fixes for FreeBSD

 -- Sven-Haegar Koch <haegar@sdinet.de>  Sun, 11 Apr 2010 17:48:44 +0200

chaosvpn (2.0~rc11-0.0) unstable; urgency=low

  * Replace usage of TunnelServer=yes with StrictSubnets=yes
    for tinc >> 1.0.12
  * Documentation and manpage updates.
  * Makefile changes for easier OpenWRT porting.
  * Debian: fix calls to invoke-rc.d, repair daily config reloads.

 -- Sven-Haegar Koch <haegar@sdinet.de>  Sun, 07 Mar 2010 10:53:01 +0100

chaosvpn (2.0~rc10-0.0) unstable; urgency=low

  * Multiple bugfixes

 -- Sven-Haegar Koch <haegar@sdinet.de>  Fri, 19 Feb 2010 23:05:29 +0100

chaosvpn (2.0~rc9-0.0) unstable; urgency=low

  * Note: starting with this version we receive a different formatted data
    from the central server.
  * Note2: you need to incorporate some changes into your chaosvpn.conf

  * Data on the Server is now signed by a central master key, and then