@@ -43,9 +43,9 @@ kill an already running tincd by reading its pid from the PIDFILE
 specified in chaosvpn.conf. After a new tincd is launched, terminate
 the chaosvpn utility instead of controlling tincd.
 .TP
-\fB-f\fP Control tincd. (default) tincd is started in the background
-and automatically restarted if it crashes, or if the configuration has
-changed.
+\fB-r\fP Control tincd and keep running. (default) tincd is started in the
+background and automatically restarted if it crashes, or if the configuration
+has changed.
 .SH SEE ALSO
 chaosvpn.conf(5), tincd(8)
 .SH BUGS
